--- a/UsTransport.Checking/UsTransport.Checking.iOS/UsTransport.Checking.iOS.csproj
+++ b/UsTransport.Checking/UsTransport.Checking.iOS/UsTransport.Checking.iOS.csproj
@@ -161,4 +161,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_store.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icon_scan.png" />
+  </ItemGroup>
 </Project>
